<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/img_btn_action_menu"
        app:showAsAction="ifRoom"
        android:title="">

        <menu>
            <!-- Изменить имя -->
            <item
                android:id="@+id/settings_menu_change_name"
                android:title="@string/change_name"
                android:icon="@drawable/ic_edit"
                app:showAsAction="never" />

            <!-- Удалить аватар -->
            <item
                android:id="@+id/settings_menu_delete_photo"
                android:title="@string/delete_avatar"
                android:icon="@drawable/img_delete"
                app:showAsAction="never" />

            <!-- Очистить кэш шифрования -->
            <item
                android:id="@+id/settings_menu_clear_cache"
                android:title="@string/clear_encryption_cache"
                android:icon="@drawable/img_delete"
                app:showAsAction="never" />

            <!-- Выйти -->
            <item
                android:id="@+id/settings_menu_exit"
                android:title="@string/exit"
                android:icon="@drawable/img_exit"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>