<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_100">

    <!-- Имя группы -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/group_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:textColor="@color/white_100"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка сохранить имя -->
    <TextView
        android:id="@+id/btn_save_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/purple_300"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/group_name_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <!-- Добавить участников -->
    <TextView
        android:id="@+id/btn_add_participants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_participants"
        android:textColor="@color/white_100"
        android:textSize="16sp"
        android:padding="16dp"
        android:background="@drawable/bg_ghost_card"
        app:layout_constraintTop_toBottomOf="@id/btn_save_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Список участников -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/participants_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/btn_add_participants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>